--- a/dapr/components/local-secret-store.yaml
+++ b/dapr/components/local-secret-store.yaml
@@ -1,13 +1,13 @@
 apiVersion: dapr.io/v1alpha1
 kind: Component
 metadata:
-  name: secretstore
+  name: local-k8-secret-store
 spec:
   type: secretstores.local.file
   version: v1
   metadata:
   - name: secretsFile
-    value: "C:\\quotes\\local-k8\\dapr\\components\\secret.json" # verify this path
+    value: "C:\\Users\\vik\\Desktop\\local deployment\\components\\secret.json" # verify this path
   - name: nestedSeparator
     value: ":"
   - name: multiValued
